--- a/services/tracker/Cargo.toml
+++ b/services/tracker/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4"
+subxt = "0.32.1"
+subxt-metadata = "0.32.1"
+
+types = { path = "../types" }
