--- a/services/api/Cargo.toml
+++ b/services/api/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 rocket = { version = "0.5.0", features=["json"] }
 rocket_cors = "0.6.0"
+
+routes = { path = "./routes", package = "api-routes" }
