--- a/services/api/routes/Cargo.toml
+++ b/services/api/routes/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 rocket = { version = "0.5.0", features=["json"] }
 rocket_cors = "0.6.0"
-serde = "1.0.193"
+serde ={ version = "1.0.193", features = ["derive"] }
+serde_json = "1.0"
 
 types = { path = "../../types" }
+storage = { path = "../../storage", package = "storage-service" }
