--- a/services/api/routes/Cargo.toml
+++ b/services/api/routes/Cargo.toml
@@ -10,4 +10,5 @@ serde ={ version = "1.0.193", features = ["derive"] }
 serde_json = "1.0"
 
 types = { path = "../../types" }
+common-macros = { path = "../../../macros" }
 storage = { path = "../../storage", package = "storage-service" }
