--- a/services/api/routes/Cargo.toml
+++ b/services/api/routes/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 types = { path = "../../types" }
 common-macros = { path = "../../../macros" }
 storage = { path = "../../storage", package = "storage-service" }
+rusqlite = { version = "0.32.1", features = ["bundled"] }
