--- a/services/api/routes/Cargo.toml
+++ b/services/api/routes/Cargo.toml
@@ -8,7 +8,8 @@ rocket = { version = "0.5.0", features=["json"] }
 rocket_cors = "0.6.0"
 serde ={ version = "1.0.193", features = ["derive"] }
 serde_json = "1.0"
-validator = { version = "0.18.1", features = ["derive"] }
 
 types = { path = "../../types" }
+common-macros = { path = "../../../macros" }
 storage = { path = "../../storage", package = "storage-service" }
+rusqlite = { version = "0.32.1", features = ["bundled"] }
