--- a/services/api/routes/Cargo.toml
+++ b/services/api/routes/Cargo.toml
@@ -8,6 +8,7 @@ rocket = { version = "0.5.0", features=["json"] }
 rocket_cors = "0.6.0"
 serde ={ version = "1.0.193", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4"
 
 types = { path = "../../types" }
 common-macros = { path = "../../../macros" }
