--- a/services/authenticator/Cargo.toml
+++ b/services/authenticator/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_derive = "1.0"
+
+google-oauth = { version = "1" }
+reqwest = { version = "0.12.7", features = ["json"] }
